[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdxt = "0.7.0"
tera = "1.19"
grass = "0.12.4"
yaml-rust = "0.4.5"
lazy_static = "1.4.0"
linked-hash-map = "*"
hxml = "0.3.2"
rayon = "1.7.0"